--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-Cython==0.29.12
-scipy==1.3.0
-hdbscan==0.8.22
-numpy==1.16.4
-joblib==0.13.2
-matplotlib==3.1.1
-plotly==4.0.0
-tqdm==4.32.2
-nose==1.3.7
+Cython>=0.29.12
+scipy>=1.3.0
+hdbscan>=0.8.22
+numpy>=1.16.4
+joblib>=0.13.2
+matplotlib>=3.0.3
+plotly>=3.6.1
+tqdm>=4.28.1
+nose>=1.3.7
+six>=1.12.0
