--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,3 +4,5 @@ global-include *.pyx
 global-include *.pxd
 global-exclude *.c*
 global-exclude .DS_Store
+recursive-exclude __pycache__
+recursive-exclude *.pyc
