--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,7 +2,8 @@ include README.md LICENSE CODE_OF_CONDUCT.md
 include requirements.txt
 global-include *.pyx
 global-include *.pxd
-global-exclude *.c*
+global-include *.c*
+global-include *.h*
 global-exclude .DS_Store
 global-exclude __pycache__
 global-exclude *.pyc
