--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -27,6 +27,7 @@ python:
   version: 3.7
   install:
     - requirements: requirements.txt
+    - requirements: requirements_docs.txt
     - method: pip
       path: .
       extra_requirements:
