--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
-Cython>=0.29.13
-scipy>=1.3.1
-hdbscan>=0.8.26
-numpy>=1.17.3
-joblib>=0.13.2
-matplotlib>=3.1.1
+Cython>=0.29.23
+scipy>=1.4.1
+hdbscan>=0.8.27
+numpy>=1.19.5
+joblib>=1.0.1
+matplotlib>=3.2.2
 plotly>=4.4.1
 tqdm>=4.41.1
-six>=1.12.0
-pandas>=1.0.5
+pandas>=1.1.5
 cma>=3.0.3
+beartype>=0.7.1
