--- a/requirements_extra.txt
+++ b/requirements_extra.txt
@@ -2,5 +2,5 @@ Sphinx>=1.8.5
 numpydoc>=1.0.0
 graphviz>=0.10.1
 ipython>=5.5.0
-nose>=1.3.7
-sphinx_rtd_theme>=0.5.0
+pydata-sphinx-theme>=0.6.3
+pytest>=3.6.4
