--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -24,14 +24,14 @@ formats: all
 
 # Optionally set the version of Python and requirements required to build your docs
 python:
-  version: 3.7
+  version: 3.9
   install:
     - requirements: requirements.txt
-    - requirements: requirements_docs.txt
+    - requirements: requirements_extra.txt
     - method: pip
       path: .
       extra_requirements:
-        - requirements_docs.txt
+        - requirements_extra.txt
   system_packages: true
 
 
