--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -11,6 +11,9 @@
 # Required
 version: 2
 
+build:
+  image: testing
+
 # Build documentation in the docs/ directory with Sphinx
 sphinx:
   configuration: docs/source/conf.py
