--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -26,6 +26,9 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
 
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v2
+
       - name: Build wheels
         uses: pypa/cibuildwheel@v2.1.1
 
@@ -35,7 +38,7 @@ jobs:
 
   build_sdist:
     name: Build source distribution
-    runs-on: ubuntu-latest
+    runs-on: ${{ matrix.os }}
     steps:
       - uses: actions/checkout@v2
 
@@ -43,6 +46,9 @@ jobs:
         name: Install Python
         with:
           python-version: ${{ matrix.python-version }}
+
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v2
 
       - name: Build sdist
         run: python setup.py sdist
