--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -1,5 +1,10 @@
 name: Build and upload pept to PyPI on a OS and Python version matrix
 
+env:
+  CIBW_SKIP: cp36-*
+  CIBW_TEST_REQUIRES: pytest
+  CIBW_TEST_COMMAND: "pytest {project}/tests"
+
 # Build on every branch push, tag push, and pull request change:
 # on: [push, pull_request]
 # Alternatively, to publish when a (published) GitHub Release is created, use the following:
@@ -11,12 +16,11 @@ on:
 
 jobs:
   build_wheels:
-    name: Build pept wheels on ${{ matrix.os }} - Python ${{ matrix.python-version }}
+    name: Build pept wheels on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version: ['3.7', '3.8', '3.9']
 
     steps:
       - uses: actions/checkout@v2
@@ -24,7 +28,7 @@ jobs:
       - uses: actions/setup-python@v2
         name: Install Python
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.8'
 
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v2
@@ -45,7 +49,7 @@ jobs:
       - uses: actions/setup-python@v2
         name: Install Python
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '3.8'
 
       - name: Install Python dependencies
         uses: py-actions/py-dependency-install@v2
