install build dependencies for sdist build

--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -48,6 +48,9 @@ jobs:
         with:
           python-version: '3.8'
 
+      - name: Install Python dependencies
+        uses: py-actions/py-dependency-install@v2
+
       - name: Build sdist
         run: python setup.py sdist
 
