--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -7,11 +7,8 @@ env:
 
 # Build on every branch push, tag push, and pull request change:
 # on: [push, pull_request]
-# Alternatively, to publish when a (published) GitHub Release is created, use the following:
-on:
-  release:
-    types:
-      - published
+# Manually trigger workflow
+on: workflow_dispatch
 
 jobs:
   build_wheels:
@@ -63,7 +60,7 @@ jobs:
     # upload to PyPI on every tag starting with 'v'
     # if: github.event_name == 'push' && startsWith(github.event.ref, 'refs/tags/v')
     # alternatively, to publish when a GitHub Release is created, use the following rule:
-    if: github.event_name == 'release' && github.event.action == 'published'
+    # if: github.event_name == 'release' && github.event.action == 'published'
     steps:
       - uses: actions/download-artifact@v2
         with:
