--- a/.github/workflows/build_wheels.yml
+++ b/.github/workflows/build_wheels.yml
@@ -7,7 +7,7 @@ name: Build and upload pept to PyPI on a OS and Python version matrix
 
 # Disable building PyPy wheels on all platforms
 env:
-  CIBW_SKIP: pp*
+  CIBW_SKIP: pp* cp36-*
 
 # Build on every branch push, tag push, and pull request change:
 # on: [push, pull_request]
