--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ Cython>=0.29.16
 scipy>=1.4.1
 hdbscan>=0.8.26
 numpy>=1.18.3
-joblib>=0.14.1
+joblib>=0.14.1,<1.2
 matplotlib>=3.2.1
 plotly>=4.4.1
 tqdm>=4.41.1
