--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,5 +1,5 @@
 include README.md LICENSE CODE_OF_CONDUCT.md
-include requirements.txt requirements_docs.txt
+include requirements.txt requirements_extra.txt
 include *.rst *.txt
 recursive-include pept *.py *.pyx *.pxd *.c* *.h*
 global-exclude .DS_Store
